--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
+
 html, body {
   margin: 0;
-  padding: 0;
+  height: 100%;
 }
-canvas {
-  display: block;
+
+body {
+  display: flex;
+  justify-content: center;   /* horizontal centering */
+  align-items: center;       /* vertical centering */
+  background: #111;
+}
+
+#canvas-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
